crates/gossamer-diagnostics/tests/snapshots/GL0038.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0038]: Three consecutive statements `let tmp = a; a = b; b = tmp` swap - here
--- framed ---
error[GL0038]: Three consecutive statements `let tmp = a; a = b; b = tmp` swap
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
