crates/gossamer-diagnostics/tests/snapshots/GL0040.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0040]: Integer literals of five or more digits are easier to scan with - here
--- framed ---
error[GL0040]: Integer literals of five or more digits are easier to scan with
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
