crates/gossamer-diagnostics/tests/snapshots/GL0043.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0043]: `match b { true => 1, false => 0 }` is an `if` in disguise that - here
--- framed ---
error[GL0043]: `match b { true => 1, false => 0 }` is an `if` in disguise that
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
