crates/gossamer-diagnostics/tests/snapshots/GL0044.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0044]: `fn f() -> () { ... }` is the same as `fn f() { ... }`. The - here
--- framed ---
error[GL0044]: `fn f() -> () { ... }` is the same as `fn f() { ... }`. The
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
