crates/gossamer-diagnostics/tests/snapshots/GL0045.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0045]: `let _: () = expr` annotates the binding with the unit type. If — here
--- framed ---
error[GL0045]: `let _: () = expr` annotates the binding with the unit type. If
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
