crates/gossamer-diagnostics/tests/snapshots/GL0048.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0048]: `match () { ... }` has exactly one reachable arm. Drop the match — here
--- framed ---
error[GL0048]: `match () { ... }` has exactly one reachable arm. Drop the match
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
